--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     .main-container {
       width: 100%;
       height: 100%;
-      background: url(./images/xiaoyang.jpg) no-repeat;
+      background: url(./images/flower.jpg) no-repeat;
       background-size: 100% 100%;
       display: flex;
       justify-content: center;
