--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     .main-container {
       width: 100%;
       height: 100%;
-      background: url(./images/flower.jpg) no-repeat;
+      background: url(./images/new_bg.jpg) no-repeat;
       background-size: 100% 100%;
       display: flex;
       justify-content: center;
@@ -104,7 +104,7 @@
     </div>
     <div class="main-container">
       <div class="title">夕会总结</div>
-      <div style="height: 60px;"></div>
+      <div style="height: 200px;"></div>
       <div class="right-box">
         <div class="class-name">一五十班</div>
         <div id="weeks" class="times">time</div>
