--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="title">夕会总结</div>
       <div style="height: 200px;"></div>
       <div class="right-box">
-        <div class="class-name">一五十班</div>
+        <div class="class-name">五四班</div>
         <div id="weeks" class="times">time</div>
       </div>
     </div>
